// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> Should render a <span> 1`] = `
.c0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip-ink: auto;
  text-decoration-skip-ink: auto;
}

.c0:focus {
  box-shadow: 0 0 2px #00B9A7;
}

<div>
  <a
    class="c0"
    href=""
  >
    test
  </a>
</div>
`;

exports[`<Link /> Should render an <a> tag 1`] = `
.c0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip-ink: auto;
  text-decoration-skip-ink: auto;
}

.c0:focus {
  box-shadow: 0 0 2px #00B9A7;
}

<div>
  <a
    class="c0"
    href="https://deliciousreverie.co.uk"
  >
    test
  </a>
</div>
`;
